--- a/views/partials/navbar.ejs
+++ b/views/partials/navbar.ejs
@@ -31,7 +31,15 @@
     <div class="menu">
       <li><a href="/">Home</a></li>
       <li><a href="/paintings">Paintings</a></li>
-      <li><a href="/signin">Sign in</a></li>
+      <% if (typeof user !== 'undefined' && user) { %>
+        <!-- Show user's name and logout if logged in -->
+        <li><a href="/user">Welcome, <%= user.name %></a></li>
+        <li><a href="/logout">Logout</a></li>
+        <li><a href="/imageUpload">Upload Art</a></li>
+      <% } else { %>
+        <!-- Show login link if not logged in -->
+        <li><a href="/signin">Sign in</a></li>
+      <% } %>
       <li><a href="#contact">Contact</a></li>
     </div>
   </ul>
