--- a/views/partials/navbar1.ejs
+++ b/views/partials/navbar1.ejs
@@ -31,6 +31,15 @@
     <div class="menu">
       <li><a href="/">Home</a></li>
       <li><a href="/paintings">Paintings</a></li>
+      <!-- Since this is navbar1, we should still add a check to prevent errors -->
+      <% if (typeof user !== 'undefined' && user) { %>
+        <li><a href="/user">Welcome, <%= user.name %></a></li>
+        <li><a href="/logout">Logout</a></li>
+        <li><a href="/imageUpload">Upload Art</a></li>
+      <% } else { %>
+        <!-- Fallback in case user isn't defined -->
+        <li><a href="/signin">Sign in</a></li>
+      <% } %>
       <li><a href="#contact">Contact</a></li>
     </div>
   </ul>
